Add option to auto restart node if behind (#120)
* Put in blocksync module

* Remove

* Unit test

* remove print

* use seconds

* fix unit test

* sd

* link

* move

* Cooldown

* comment

* sd

* Fix bug

* remove

* Fix test

* Fix test

* 20 tests

* Fix tests

* 3m

* sd

* Address Comments

* is block sync

* Remove deprecated field

* log comment

* 10 mins?

* Update comments

* use channels instead of sleeps

* use require eventually instead of blind waiting

* Remove go routine

* shorter timeout

--- a/sei-tendermint/.github/workflows/tests.yml
+++ b/sei-tendermint/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        part: ["00", "01", "02", "03", "04", "05", "06", "07", "08", "09"]
+        part: ["00", "01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19"]
     steps:
       - uses: actions/setup-go@v3
         with:
@@ -30,6 +30,6 @@ jobs:
             Makefile
       - name: Run Go Tests
         run: |
-          NUM_SPLIT=10
-          make test-group-${{matrix.part}} NUM_SPLIT=10
+          NUM_SPLIT=20
+          make test-group-${{matrix.part}} NUM_SPLIT=20
         if: env.GIT_DIFF
