--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,7 +4,8 @@ name: Go
 on:
   push:
     branches: [ master ]
-  pull_request:
+  # Allows non-contributors to run PR jobs
+  pull_request_target:
     branches: [ master ]
 
 defaults:
