--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,10 @@ jobs:
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        ref: ${{ github.ref }}
     - uses: actions/setup-python@v3
 
     - name: Set up Go
