--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-        ref: ${{ github.ref }}
+        ref: "refs/pull/${{ github.event.number }}/merge"
     - uses: actions/setup-python@v3
 
     - name: Set up Go
