--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,24 +34,13 @@ jobs:
     - run: go install github.com/axw/gocov/gocov@latest
     - run: go install github.com/AlekSi/gocov-xml@latest
 
-    - name: Test coverage report
-      run: go test ./...  -coverprofile=cover.out
-    - run: gocov convert cover.out | gocov-xml > coverage.xml
+    - name: Test
+      run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
 
-    - name: Code Coverage Summary Report
-      uses: irongut/CodeCoverageSummary@v1.3.0
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
       with:
-        filename: coverage.xml
-        badge: true
-        format: 'markdown'  
-        output: 'both'
-
-    - name: Add Coverage PR Comment
-      uses: marocchino/sticky-pull-request-comment@v2.6.2
-      if: github.event_name == 'pull_request'
-      with:
-        recreate: true
-        path: code-coverage-results.md
-
-    - name: Write to Job Summary
-      run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
+        file: ./coverage.txt
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: true
