--- a/.github/workflows/unit-test-coverage.yml
+++ b/.github/workflows/unit-test-coverage.yml
@@ -32,7 +32,7 @@ jobs:
         go-version: 1.18
 
     - name: Run coverage
-      run: go test -race -coverprofile=coverage.txt -covermode=atomic
+      run: go test -v ./... -coverprofile=coverage.txt -covermode=atomic
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
