--- a/codecov.yml
+++ b/codecov.yml
@@ -1,34 +1,6 @@
-codecov:
-  require_ci_to_pass: yes
-
 coverage:
-  precision: 2
-  round: down
-  range: "70...100"
-  
   status:
-    project: 
+    project:
       default:
-        target: auto
-        threshold: 1% 
-        if_not_found: success
-        if_ci_failed: error
-    patch: 
-      default:
-        target: auto
-        threshold: 1% 
-        if_not_found: success
-        if_ci_failed: error
-
-parsers:
-  gcov:
-    branch_detection:
-      conditional: yes
-      loop: yes
-      method: no
-      macro: no
-
-comment:
-  layout: "header, diff, changes, sunburst, suggestions, source"
-  behavior: default
-  require_changes: no
+        target: 80%
+        threshold: 3%
