--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -40,7 +40,12 @@ jobs:
           sleep 5
 
       - name: Verify Sei Chain is able to start up
-        run: ./docker/integration_test/startup_test.sh
+        run: integration_test/startup/startup_test.sh
 
       - name: Testing Dex Module
-        run: ./docker/integration_test/dex_module_test.sh
+        run: docker exec -i integration_test/dex_module/place_order_test.sh
+
+      - name: Testing Wasm Module
+        run: |
+          docker exec -i integration_test/wasm_module/deploy_timelocked_token_contract.sh
+          docker exec -i integration_test/wasm_module/timelocked_token_test.sh
