Add more integration tests

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ loadtest_results.txt
 parallelization/**/artifacts/
 parallelization/**/target/
 parallelization/**/Cargo.lock
+
+# integration test resources
+integration_test/**/*.txt
