--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -40,12 +40,16 @@ jobs:
           sleep 5
 
       - name: Verify Sei Chain is able to start up
-        run: integration_test/startup/startup_test.sh
+        run: docker exec -i sei-node-0 integration_test/startup/startup_test.sh
 
       - name: Testing Dex Module
-        run: docker exec -i integration_test/dex_module/place_order_test.sh
+        run: docker exec -i sei-node-0 integration_test/dex_module/place_order_test.sh
 
       - name: Testing Wasm Module
         run: |
-          docker exec -i integration_test/wasm_module/deploy_timelocked_token_contract.sh
-          docker exec -i integration_test/wasm_module/timelocked_token_test.sh
+          docker exec -i sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh
+          docker exec -i sei-node-0 integration_test/wasm_module/timelocked_token_test_1.sh
+          docker exec -i sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh
+          docker exec -i sei-node-0 integration_test/wasm_module/timelocked_token_test_2.sh
+          docker exec -i sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh
+          docker exec -i sei-node-0 integration_test/wasm_module/timelocked_token_test_3.sh
