--- a/.github/workflows/unit-test-coverage.yml
+++ b/.github/workflows/unit-test-coverage.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-        ref: "refs/pull/${{ github.event.number }}/merge"
+        ref: ${{ github.event.pull_request && 'refs/pull/${{ github.event.pull_request.number }}/merge' }}
     - uses: actions/setup-python@v3
 
     - name: Set up Go
