--- a/codecov.yml
+++ b/codecov.yml
@@ -2,6 +2,6 @@ coverage:
   status:
     project:
       default:
-        target: 80%
+        target: 60%
 ignore:
-  - "**/*_pb.go"         # Auto-generated files
+  - "**/*pb*go"         # Auto-generated files
