--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -40,12 +40,12 @@ jobs:
           sleep 10
 
       - name: Verify Sei Chain is able to start up
-        run: python3 integration_test/scripts/runner.py integration_test/startup/startup_test.json
+        run: python3 integration_test/scripts/runner.py integration_test/startup/startup_test.yaml
 
       - name: Testing Dex Module
         run: |
           docker exec -i sei-node-0 integration_test/contracts/deploy_dex_contract.sh mars
-          python3 integration_test/scripts/runner.py integration_test/dex_module/place_order_test.json
+          python3 integration_test/scripts/runner.py integration_test/dex_module/place_order_test.yaml
 
       - name: Testing Wasm Module
         run: |
