--- a/integration_test/wasm_module/timelocked_token_delegation_test.yaml
+++ b/integration_test/wasm_module/timelocked_token_delegation_test.yaml
@@ -14,8 +14,7 @@
       env: RESULT
   verifiers:
     - type: condition
-      result: RESULT
-      expr: -eq 0
+      eval: RESULT == 0
 
 - name: Test token redelegation
   inputs:
@@ -36,9 +35,8 @@
     - cmd: printf "12345678\n" | seid tx wasm execute $GRINGOTTS_ADDR " $PARAMS " -y --from=op --chain-id=sei --gas=5000000 --fees=1000000usei --broadcast-mode=block --output=json |jq -M -r .code
       env: RESULT
   verifiers:
-    - type: condition
-      result: RESULT
-      expr: -eq 0
+    - type: eval
+      expr: RESULT == 0
 
 - name: Test token undelegation
   inputs:
@@ -56,6 +54,5 @@
     - cmd: printf "12345678\n" | seid tx wasm execute $GRINGOTTS_ADDR " $PARAMS " -y --from=op --chain-id=sei --gas=5000000 --fees=1000000usei --broadcast-mode=block --output=json |jq -M -r .code
       env: RESULT
   verifiers:
-    - type: condition
-      result: RESULT
-      expr: -eq 0
+    - type: eval
+      expr: RESULT == 0
