--- a/integration_test/wasm_module/timelocked_token_emergency_withdraw_test.yaml
+++ b/integration_test/wasm_module/timelocked_token_emergency_withdraw_test.yaml
@@ -23,18 +23,15 @@
     - cmd: seid q wasm contract-state smart $GRINGOTTS_ADDR "{\"info\":{}}" --output json |jq -r .data.withdrawn_locked
       env: END_AMOUNT
   verifiers:
-    - type: condition
-      result: PROPOSAL_ID
-      expr: -gt 0
+    - type: eval
+      expr: PROPOSAL_ID > 0
     - type: regex
       result: PROPOSAL_STATUS_1
       expr: '^.*passed.*'
     - type: regex
       result: PROPOSAL_STATUS_2
       expr: '^.*executed.*'
-    - type: condition
-      result: START_AMOUNT
-      expr: -gt 0
-    - type: condition
-      result: END_AMOUNT
-      expr: -eq 0
+    - type: eval
+      expr: START_AMOUNT > 0
+    - type: eval
+      expr: END_AMOUNT == 0
