--- a/integration_test/wasm_module/timelocked_token_delegation_test.yaml
+++ b/integration_test/wasm_module/timelocked_token_delegation_test.yaml
@@ -14,7 +14,7 @@
       env: RESULT
   verifiers:
     - type: eval
-      eval: RESULT == 0
+      expr: RESULT == 0
 
 - name: Test token redelegation
   inputs:
