--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Testing Dex Module
         run: |
-          docker exec -i sei-node-0 integration_test/contracts/deploy_dex_contract.sh mars
+          docker exec sei-node-0 integration_test/contracts/deploy_dex_contract.sh mars
           python3 integration_test/scripts/runner.py integration_test/dex_module/place_order_test.yaml
 
       - name: Testing Wasm Module
@@ -61,4 +61,4 @@ jobs:
           python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_admin_test.yaml
           python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_withdraw_test.yaml
           docker exec sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh
-          python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_emgergency_withdraw_test.yaml
+          python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_emergency_withdraw_test.yaml
