--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -68,6 +68,9 @@ jobs:
       - name: Install gocovmerge
         run: go get github.com/wadey/gocovmerge && go install github.com/wadey/gocovmerge
 
+      - name: Print out all coverage files
+        run: find . -name "*coverage" | while read -r file; do echo "$file" done
+
       - name: Merge coverage reports
         run: gocovmerge $(find . -name *coverage) > coverage.txt
 
