--- a/sei-cosmos/codecov.yml
+++ b/sei-cosmos/codecov.yml
@@ -1,7 +1,25 @@
 coverage:
+  precision: 2
+  round: down
   status:
+    # Learn more at https://docs.codecov.io/docs/commit-status
     project:
       default:
-        target: 80%
+        threshold: 1% # allow this much decrease on project
+        target: 70%
+
+comment:
+  layout: "reach,diff,flags,tree,betaprofiling"
+  behavior: default # update if exists else create new
+  require_changes: true
+
 ignore:
-  - "**/*pb*go"         # Auto-generated files
+  - "docs"
+  - "*.md"
+  - "*.rst"
+  - "**/*pb*.go"
+  - "tests/*"
+  - "tests/**/*"
+  - "x/**/test_common.go"
+  - "scripts/"
+  - "contrib"
