--- a/codecov.yml
+++ b/codecov.yml
@@ -1,7 +1,23 @@
 coverage:
+  precision: 2
+  round: down
   status:
     project:
       default:
         target: 60%
+        threshold: 1% # allow this much decrease on project
+
+comment:
+  layout: "reach,diff,flags,tree,betaprofiling"
+  behavior: default # update if exists else create new
+  require_changes: true
+
 ignore:
-  - "**/*pb*go"         # Auto-generated files
+  - "docs"
+  - "*.md"
+  - "*.rst"
+  - "**/*pb*.go"
+  - "tests/**/*"
+  - "x/**/test_common.go"
+  - "scripts/"
+  - "contrib"
