--- a/sei-tendermint/.github/workflows/tests.yml
+++ b/sei-tendermint/.github/workflows/tests.yml
@@ -2,8 +2,6 @@ name: Test
 on:
   pull_request:
   push:
-    paths:
-      - "**.go"
     branches:
       - main
       - release/**
@@ -71,10 +69,20 @@ jobs:
         run: go get github.com/wadey/gocovmerge && go install github.com/wadey/gocovmerge
 
       - name: Merge coverage reports
-        run: gocovmerge $(find . -name *profile.out) > coverage.txt
+        run: gocovmerge $(find . -type f -name '*profile.out') > coverage.txt
+
+      - name: Check coverage report lines
+        run: wc -l coverage.txt
+        continue-on-error: true
+
+      - name: Check coverage report files
+        run: ls **/*profile.out
+        continue-on-error: true
 
       # Now we upload the merged report to Codecov
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage.txt
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
