[CI] Add integration test framework for sei chain (#863)
* Add integration test framework for sei chain

* Add template link

* Add a simple example

* Fix workflow file

* Fix bash

* Test

* Fix if condition

* Turn off TTY

* Use python eval

* Add python3

* Add debug log

* Remove -ti

* Fix one integration test

* Fix one integration test

* Fix one integration test

* Fix one integration test

* Fix a typo

---------

Co-authored-by: Yiming Zang <yzang@twitter.com>

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -22,6 +22,13 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Pyyaml
+        run: |
+          pip3 install pyyaml
 
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -37,19 +44,21 @@ jobs:
           do
             sleep 10
           done
-          sleep 5
+          sleep 10
 
       - name: Verify Sei Chain is able to start up
-        run: docker exec -i sei-node-0 integration_test/startup/startup_test.sh
+        run: python3 integration_test/scripts/runner.py integration_test/startup/startup_test.yaml
 
       - name: Testing Dex Module
-        run: docker exec -i sei-node-0 integration_test/dex_module/place_order_test.sh
+        run: |
+          docker exec sei-node-0 integration_test/contracts/deploy_dex_contract.sh mars
+          python3 integration_test/scripts/runner.py integration_test/dex_module/place_order_test.yaml
 
       - name: Testing Wasm Module
         run: |
-          docker exec -i sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh
-          docker exec -i sei-node-0 integration_test/wasm_module/timelocked_token_test_1.sh
-          docker exec -i sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh
-          docker exec -i sei-node-0 integration_test/wasm_module/timelocked_token_test_2.sh
-          docker exec -i sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh migration
-          docker exec -i sei-node-0 integration_test/wasm_module/timelocked_token_test_3.sh
+          docker exec sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh
+          python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_delegation_test.yaml
+          python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_admin_test.yaml
+          python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_withdraw_test.yaml
+          docker exec sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh
+          python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_emergency_withdraw_test.yaml
