--- a/integration_test/tokenfactory_module/create_tokenfactory_test.yaml
+++ b/integration_test/tokenfactory_module/create_tokenfactory_test.yaml
@@ -17,4 +17,4 @@
   verifiers:
     # All fields should be populated and match the base name
     - type: eval
-      expr: NAME == BASE
+      expr: NAME == BASE and SYMBOL == BASE and DISPLAY == BASE
