--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - CLUSTER_SIZE=4
       - NUM_ACCOUNTS
       - SKIP_BUILD
+      - INVARIANT_CHECK_INTERVAL
     volumes:
       - "${PROJECT_HOME}:/sei-protocol/sei-chain:Z"
       - "${PROJECT_HOME}/../sei-tendermint:/sei-protocol/sei-tendermint:Z"
@@ -34,6 +35,7 @@ services:
       - CLUSTER_SIZE=4
       - NUM_ACCOUNTS
       - SKIP_BUILD
+      - INVARIANT_CHECK_INTERVAL
     volumes:
       - "${PROJECT_HOME}:/sei-protocol/sei-chain:Z"
       - "${PROJECT_HOME}/../sei-tendermint:/sei-protocol/sei-tendermint:Z"
@@ -52,6 +54,7 @@ services:
       - CLUSTER_SIZE=4
       - NUM_ACCOUNTS
       - SKIP_BUILD
+      - INVARIANT_CHECK_INTERVAL
     ports:
       - "26662-26664:26656-26658"
       - "9094-9095:9090-9091"
@@ -73,6 +76,7 @@ services:
       - CLUSTER_SIZE=4
       - NUM_ACCOUNTS
       - SKIP_BUILD
+      - INVARIANT_CHECK_INTERVAL
     ports:
       - "26665-26667:26656-26658"
       - "9096-9097:9090-9091"
