--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -46,7 +46,7 @@ jobs:
       
       - name: Run cluster with 4 nodes
         run: >
-            kurtosis run github.com/kurtosis-tech/sei-package '{"cluster_size": 4, "num_accounts": 10, "image": "sei-chain/localnode", "git_url": "${{ github.server_url }}/${{ github.repository }}/", "git_ref": "${{ github.head_ref}}"}' --enclave sei-integration-test
+            kurtosis run github.com/kurtosis-tech/sei-package@b130bd658f9bf58e6410e93ace46398435df0d1c '{"cluster_size": 4, "num_accounts": 10, "invariant_check_interval": 10, "image": "sei-chain/localnode", "git_url": "${{ github.server_url }}/${{ github.repository }}/", "git_ref": "${{ github.head_ref}}"}' --enclave sei-integration-test
 
       - name: Verify Sei Chain is able to start up
         run: python3 integration_test/scripts/runner.py integration_test/startup/startup_test.yaml
